style: apply code formatting improvements across multiple files