@@ -23,8 +23,9 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import com.alibaba.loongsuite.otel.util.genai.types.InputMessage;
 import com.alibaba.loongsuite.otel.util.genai.types.OutputMessage;
 import com.alibaba.loongsuite.otel.util.genai.types.TextPart;
-import io.opentelemetry.api.common.AttributeKey;
+
 import io.opentelemetry.api.OpenTelemetry;
+import io.opentelemetry.api.common.AttributeKey;
 import io.opentelemetry.api.trace.SpanKind;
 import io.opentelemetry.api.trace.StatusCode;
 import io.opentelemetry.sdk.OpenTelemetrySdk;
@@ -32,7 +33,11 @@ import io.opentelemetry.sdk.testing.exporter.InMemorySpanExporter;
 import io.opentelemetry.sdk.trace.SdkTracerProvider;
 import io.opentelemetry.sdk.trace.data.SpanData;
 import io.opentelemetry.sdk.trace.export.SimpleSpanProcessor;
+
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -50,12 +55,8 @@ class GenAiTelemetryHandlerTest {
         SdkTracerProvider.builder()
             .addSpanProcessor(SimpleSpanProcessor.create(spanExporter))
             .build();
-    openTelemetry =
-        OpenTelemetrySdk.builder().setTracerProvider(tracerProvider).build();
-    handler =
-        GenAiTelemetryHandler.builder(openTelemetry)
-            .setCompletionHook(context -> {})
-            .build();
+    openTelemetry = OpenTelemetrySdk.builder().setTracerProvider(tracerProvider).build();
+    handler = GenAiTelemetryHandler.builder(openTelemetry).setCompletionHook(context -> {}).build();
   }
 
   @AfterEach
@@ -68,13 +69,12 @@ class GenAiTelemetryHandlerTest {
     try (InferenceInvocation inv = handler.inference("openai", "gpt-4o")) {
       inv.setTemperature(0.7);
       inv.setInputMessages(
-          List.of(
-              new InputMessage(
-                  "user", List.of(new TextPart("Hello")))));
+          Collections.singletonList(
+              new InputMessage("user", Collections.singletonList(new TextPart("Hello")))));
       inv.setOutputMessages(
-          List.of(
+          Collections.singletonList(
               new OutputMessage(
-                  "assistant", List.of(new TextPart("Hi there!")), "stop")));
+                  "assistant", Collections.singletonList(new TextPart("Hi there!")), "stop")));
       inv.setResponseModel("gpt-4o-2024-08-06");
       inv.setInputTokens(10L);
       inv.setOutputTokens(5L);
@@ -88,24 +88,22 @@ class GenAiTelemetryHandlerTest {
     assertEquals(SpanKind.CLIENT, span.getKind());
 
     // Common attributes
-    assertEquals("chat", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("openai", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.provider.name")));
-    assertEquals("gpt-4o", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.request.model")));
+    assertEquals("chat", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "openai", span.getAttributes().get(AttributeKey.stringKey("gen_ai.provider.name")));
+    assertEquals(
+        "gpt-4o", span.getAttributes().get(AttributeKey.stringKey("gen_ai.request.model")));
 
     // Response attributes
-    assertEquals("gpt-4o-2024-08-06", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.response.model")));
-    assertEquals(10L, span.getAttributes().get(
-        AttributeKey.longKey("gen_ai.usage.input_tokens")));
-    assertEquals(5L, span.getAttributes().get(
-        AttributeKey.longKey("gen_ai.usage.output_tokens")));
+    assertEquals(
+        "gpt-4o-2024-08-06",
+        span.getAttributes().get(AttributeKey.stringKey("gen_ai.response.model")));
+    assertEquals(10L, span.getAttributes().get(AttributeKey.longKey("gen_ai.usage.input_tokens")));
+    assertEquals(5L, span.getAttributes().get(AttributeKey.longKey("gen_ai.usage.output_tokens")));
 
     // Request attributes
-    assertEquals(0.7, span.getAttributes().get(
-        AttributeKey.doubleKey("gen_ai.request.temperature")));
+    assertEquals(
+        0.7, span.getAttributes().get(AttributeKey.doubleKey("gen_ai.request.temperature")));
   }
 
   @Test
@@ -119,8 +117,8 @@ class GenAiTelemetryHandlerTest {
 
     SpanData span = spans.get(0);
     assertEquals(StatusCode.ERROR, span.getStatus().getStatusCode());
-    assertEquals("RuntimeException", span.getAttributes().get(
-        AttributeKey.stringKey("error.type")));
+    assertEquals(
+        "RuntimeException", span.getAttributes().get(AttributeKey.stringKey("error.type")));
   }
 
   @Test
@@ -134,8 +132,8 @@ class GenAiTelemetryHandlerTest {
 
     SpanData span = spans.get(0);
     assertEquals(StatusCode.ERROR, span.getStatus().getStatusCode());
-    assertEquals("rate_limit_exceeded", span.getAttributes().get(
-        AttributeKey.stringKey("error.type")));
+    assertEquals(
+        "rate_limit_exceeded", span.getAttributes().get(AttributeKey.stringKey("error.type")));
   }
 
   @Test
@@ -180,9 +178,9 @@ class GenAiTelemetryHandlerTest {
       inv.setFrequencyPenalty(0.5);
       inv.setPresencePenalty(0.3);
       inv.setMaxTokens(1024L);
-      inv.setStopSequences(List.of("END", "STOP"));
+      inv.setStopSequences(Arrays.asList("END", "STOP"));
       inv.setSeed(42L);
-      inv.setFinishReasons(List.of("stop"));
+      inv.setFinishReasons(Collections.singletonList("stop"));
       inv.setResponseId("chatcmpl-abc123");
     }
 
@@ -190,30 +188,29 @@ class GenAiTelemetryHandlerTest {
     assertEquals(1, spans.size());
 
     SpanData span = spans.get(0);
-    assertEquals(0.9, span.getAttributes().get(
-        AttributeKey.doubleKey("gen_ai.request.temperature")));
-    assertEquals(0.95, span.getAttributes().get(
-        AttributeKey.doubleKey("gen_ai.request.top_p")));
-    assertEquals(0.5, span.getAttributes().get(
-        AttributeKey.doubleKey("gen_ai.request.frequency_penalty")));
-    assertEquals(0.3, span.getAttributes().get(
-        AttributeKey.doubleKey("gen_ai.request.presence_penalty")));
-    assertEquals(1024L, span.getAttributes().get(
-        AttributeKey.longKey("gen_ai.request.max_tokens")));
-    assertEquals(42L, span.getAttributes().get(
-        AttributeKey.longKey("gen_ai.request.seed")));
-    assertEquals(List.of("END", "STOP"), span.getAttributes().get(
-        AttributeKey.stringArrayKey("gen_ai.request.stop_sequences")));
-    assertEquals(List.of("stop"), span.getAttributes().get(
-        AttributeKey.stringArrayKey("gen_ai.response.finish_reasons")));
-    assertEquals("chatcmpl-abc123", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.response.id")));
+    assertEquals(
+        0.9, span.getAttributes().get(AttributeKey.doubleKey("gen_ai.request.temperature")));
+    assertEquals(0.95, span.getAttributes().get(AttributeKey.doubleKey("gen_ai.request.top_p")));
+    assertEquals(
+        0.5, span.getAttributes().get(AttributeKey.doubleKey("gen_ai.request.frequency_penalty")));
+    assertEquals(
+        0.3, span.getAttributes().get(AttributeKey.doubleKey("gen_ai.request.presence_penalty")));
+    assertEquals(
+        1024L, span.getAttributes().get(AttributeKey.longKey("gen_ai.request.max_tokens")));
+    assertEquals(42L, span.getAttributes().get(AttributeKey.longKey("gen_ai.request.seed")));
+    assertEquals(
+        Arrays.asList("END", "STOP"),
+        span.getAttributes().get(AttributeKey.stringArrayKey("gen_ai.request.stop_sequences")));
+    assertEquals(
+        Collections.singletonList("stop"),
+        span.getAttributes().get(AttributeKey.stringArrayKey("gen_ai.response.finish_reasons")));
+    assertEquals(
+        "chatcmpl-abc123", span.getAttributes().get(AttributeKey.stringKey("gen_ai.response.id")));
   }
 
   @Test
   void testInferenceCustomOperationName() {
-    try (InferenceInvocation inv =
-        handler.inference("openai", "gpt-4o", null, null, "generate")) {
+    try (InferenceInvocation inv = handler.inference("openai", "gpt-4o", null, null, "generate")) {
       inv.setInputTokens(10L);
     }
 
@@ -222,14 +219,14 @@ class GenAiTelemetryHandlerTest {
 
     SpanData span = spans.get(0);
     assertEquals("generate gpt-4o", span.getName());
-    assertEquals("generate", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "generate", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
   }
 
   @Test
   void testEmbeddingInvocation() {
     try (EmbeddingInvocation inv = handler.embedding("openai", "text-embedding-3-small")) {
-      inv.setEncodingFormats(List.of("float", "base64"));
+      inv.setEncodingFormats(Arrays.asList("float", "base64"));
       inv.setInputTokens(25L);
       inv.setDimensionCount(1536L);
       inv.setResponseModel("text-embedding-3-small");
@@ -242,24 +239,24 @@ class GenAiTelemetryHandlerTest {
     assertEquals("embeddings text-embedding-3-small", span.getName());
     assertEquals(SpanKind.CLIENT, span.getKind());
 
-    assertEquals("embeddings", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("openai", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.provider.name")));
-    assertEquals("text-embedding-3-small", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.request.model")));
-    assertEquals(25L, span.getAttributes().get(
-        AttributeKey.longKey("gen_ai.usage.input_tokens")));
-    assertEquals(1536L, span.getAttributes().get(
-        AttributeKey.longKey("gen_ai.embeddings.dimension.count")));
-    assertEquals(List.of("float", "base64"), span.getAttributes().get(
-        AttributeKey.stringArrayKey("gen_ai.request.encoding_formats")));
+    assertEquals(
+        "embeddings", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "openai", span.getAttributes().get(AttributeKey.stringKey("gen_ai.provider.name")));
+    assertEquals(
+        "text-embedding-3-small",
+        span.getAttributes().get(AttributeKey.stringKey("gen_ai.request.model")));
+    assertEquals(25L, span.getAttributes().get(AttributeKey.longKey("gen_ai.usage.input_tokens")));
+    assertEquals(
+        1536L, span.getAttributes().get(AttributeKey.longKey("gen_ai.embeddings.dimension.count")));
+    assertEquals(
+        Arrays.asList("float", "base64"),
+        span.getAttributes().get(AttributeKey.stringArrayKey("gen_ai.request.encoding_formats")));
   }
 
   @Test
   void testToolInvocation() {
-    try (ToolInvocation inv =
-        handler.tool("get_weather", "call_123", "function", "Get weather")) {
+    try (ToolInvocation inv = handler.tool("get_weather", "call_123", "function", "Get weather")) {
       inv.setArguments("{\"city\": \"Beijing\"}");
       inv.setToolResult("{\"temperature\": 25}");
     }
@@ -270,21 +267,17 @@ class GenAiTelemetryHandlerTest {
     SpanData span = spans.get(0);
     assertEquals("execute_tool get_weather", span.getName());
     assertEquals(SpanKind.INTERNAL, span.getKind());
-    assertTrue(
-        span.getAttributes().get(
-                AttributeKey.stringKey("gen_ai.provider.name"))
-            == null);
+    assertTrue(span.getAttributes().get(AttributeKey.stringKey("gen_ai.provider.name")) == null);
 
-    assertEquals("execute_tool", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("get_weather", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.tool.name")));
-    assertEquals("call_123", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.tool.call.id")));
-    assertEquals("function", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.tool.type")));
-    assertEquals("Get weather", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.tool.description")));
+    assertEquals(
+        "execute_tool", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "get_weather", span.getAttributes().get(AttributeKey.stringKey("gen_ai.tool.name")));
+    assertEquals(
+        "call_123", span.getAttributes().get(AttributeKey.stringKey("gen_ai.tool.call.id")));
+    assertEquals("function", span.getAttributes().get(AttributeKey.stringKey("gen_ai.tool.type")));
+    assertEquals(
+        "Get weather", span.getAttributes().get(AttributeKey.stringKey("gen_ai.tool.description")));
   }
 
   @Test
@@ -299,15 +292,15 @@ class GenAiTelemetryHandlerTest {
     SpanData span = spans.get(0);
     assertEquals("execute_tool search", span.getName());
     assertEquals(SpanKind.INTERNAL, span.getKind());
-    assertEquals("search", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.tool.name")));
+    assertEquals("search", span.getAttributes().get(AttributeKey.stringKey("gen_ai.tool.name")));
   }
 
   @Test
   void testWorkflowInvocation() {
     try (WorkflowInvocation inv = handler.workflow("my-pipeline")) {
       inv.setInputMessages(
-          List.of(new InputMessage("user", List.of(new TextPart("process this")))));
+          Collections.singletonList(
+              new InputMessage("user", Collections.singletonList(new TextPart("process this")))));
     }
 
     List<SpanData> spans = spanExporter.getFinishedSpanItems();
@@ -317,14 +310,12 @@ class GenAiTelemetryHandlerTest {
     assertEquals("invoke_workflow my-pipeline", span.getName());
     assertEquals(SpanKind.INTERNAL, span.getKind());
 
-    assertEquals("invoke_workflow", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("my-pipeline", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.workflow.name")));
-    assertTrue(
-        span.getAttributes().get(
-                AttributeKey.stringKey("gen_ai.provider.name"))
-            == null);
+    assertEquals(
+        "invoke_workflow",
+        span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "my-pipeline", span.getAttributes().get(AttributeKey.stringKey("gen_ai.workflow.name")));
+    assertTrue(span.getAttributes().get(AttributeKey.stringKey("gen_ai.provider.name")) == null);
   }
 
   @Test
@@ -340,8 +331,7 @@ class GenAiTelemetryHandlerTest {
 
   @Test
   void testLocalAgentInvocation() {
-    try (AgentInvocation inv =
-        handler.invokeLocalAgent("openai", "gpt-4o", "research-agent")) {
+    try (AgentInvocation inv = handler.invokeLocalAgent("openai", "gpt-4o", "research-agent")) {
       inv.setAgentId("agent-001");
       inv.setAgentDescription("A research assistant");
       inv.setInputTokens(200L);
@@ -355,33 +345,26 @@ class GenAiTelemetryHandlerTest {
     assertEquals("invoke_agent research-agent", span.getName());
     assertEquals(SpanKind.INTERNAL, span.getKind());
 
-    assertEquals("invoke_agent", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("research-agent", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.agent.name")));
-    assertEquals("agent-001", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.agent.id")));
-    assertEquals("A research assistant", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.agent.description")));
-    assertEquals("openai", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.provider.name")));
-    assertEquals("gpt-4o", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.request.model")));
-    assertTrue(
-        span.getAttributes().get(
-                AttributeKey.stringKey("server.address"))
-            == null);
-    assertTrue(
-        span.getAttributes().get(
-                AttributeKey.stringKey("gen_ai.response.model"))
-            == null);
+    assertEquals(
+        "invoke_agent", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "research-agent", span.getAttributes().get(AttributeKey.stringKey("gen_ai.agent.name")));
+    assertEquals("agent-001", span.getAttributes().get(AttributeKey.stringKey("gen_ai.agent.id")));
+    assertEquals(
+        "A research assistant",
+        span.getAttributes().get(AttributeKey.stringKey("gen_ai.agent.description")));
+    assertEquals(
+        "openai", span.getAttributes().get(AttributeKey.stringKey("gen_ai.provider.name")));
+    assertEquals(
+        "gpt-4o", span.getAttributes().get(AttributeKey.stringKey("gen_ai.request.model")));
+    assertTrue(span.getAttributes().get(AttributeKey.stringKey("server.address")) == null);
+    assertTrue(span.getAttributes().get(AttributeKey.stringKey("gen_ai.response.model")) == null);
   }
 
   @Test
   void testRemoteAgentInvocation() {
     try (AgentInvocation inv =
-        handler.invokeRemoteAgent(
-            "openai", "gpt-4o", "code-agent", "agent.example.com", 443)) {
+        handler.invokeRemoteAgent("openai", "gpt-4o", "code-agent", "agent.example.com", 443)) {
       inv.setAgentVersion("1.0.0");
       inv.setConversationId("conv-xyz");
     }
@@ -393,18 +376,16 @@ class GenAiTelemetryHandlerTest {
     assertEquals("invoke_agent code-agent", span.getName());
     assertEquals(SpanKind.CLIENT, span.getKind());
 
-    assertEquals("invoke_agent", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("code-agent", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.agent.name")));
-    assertEquals("agent.example.com", span.getAttributes().get(
-        AttributeKey.stringKey("server.address")));
-    assertEquals(443L, span.getAttributes().get(
-        AttributeKey.longKey("server.port")));
-    assertEquals("1.0.0", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.agent.version")));
-    assertEquals("conv-xyz", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.conversation.id")));
+    assertEquals(
+        "invoke_agent", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "code-agent", span.getAttributes().get(AttributeKey.stringKey("gen_ai.agent.name")));
+    assertEquals(
+        "agent.example.com", span.getAttributes().get(AttributeKey.stringKey("server.address")));
+    assertEquals(443L, span.getAttributes().get(AttributeKey.longKey("server.port")));
+    assertEquals("1.0.0", span.getAttributes().get(AttributeKey.stringKey("gen_ai.agent.version")));
+    assertEquals(
+        "conv-xyz", span.getAttributes().get(AttributeKey.stringKey("gen_ai.conversation.id")));
   }
 
   @Test
@@ -415,8 +396,8 @@ class GenAiTelemetryHandlerTest {
 
     List<SpanData> spans = spanExporter.getFinishedSpanItems();
     assertEquals(1, spans.size());
-    assertEquals("custom-value", spans.get(0).getAttributes().get(
-        AttributeKey.stringKey("custom.key")));
+    assertEquals(
+        "custom-value", spans.get(0).getAttributes().get(AttributeKey.stringKey("custom.key")));
   }
 
   @Test
@@ -465,13 +446,11 @@ class GenAiTelemetryHandlerTest {
     assertEquals(1, spans.size());
 
     SpanData span = spans.get(0);
-    assertEquals("api.openai.com", span.getAttributes().get(
-        AttributeKey.stringKey("server.address")));
-    assertEquals(443L, span.getAttributes().get(
-        AttributeKey.longKey("server.port")));
+    assertEquals(
+        "api.openai.com", span.getAttributes().get(AttributeKey.stringKey("server.address")));
+    assertEquals(443L, span.getAttributes().get(AttributeKey.longKey("server.port")));
     // operationName defaults to "chat" when null
-    assertEquals("chat", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals("chat", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
   }
 
   @Test
@@ -485,8 +464,8 @@ class GenAiTelemetryHandlerTest {
 
     SpanData span = spans.get(0);
     assertEquals(StatusCode.ERROR, span.getStatus().getStatusCode());
-    assertEquals("IllegalStateException", span.getAttributes().get(
-        AttributeKey.stringKey("error.type")));
+    assertEquals(
+        "IllegalStateException", span.getAttributes().get(AttributeKey.stringKey("error.type")));
   }
 
   @Test
@@ -515,19 +494,19 @@ class GenAiTelemetryHandlerTest {
     SpanData span = spans.get(0);
     assertEquals("retrieval kb-product-docs", span.getName());
     assertEquals(SpanKind.CLIENT, span.getKind());
-    assertEquals("retrieval", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.operation.name")));
-    assertEquals("pinecone", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.provider.name")));
-    assertEquals("kb-product-docs", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.data_source.id")));
-    assertEquals("text-embedding-3-small", span.getAttributes().get(
-        AttributeKey.stringKey("gen_ai.request.model")));
-    assertEquals("api.pinecone.io", span.getAttributes().get(
-        AttributeKey.stringKey("server.address")));
-    assertEquals(443L, span.getAttributes().get(
-        AttributeKey.longKey("server.port")));
-    assertEquals(5.0, span.getAttributes().get(
-        AttributeKey.doubleKey("gen_ai.request.top_k")));
+    assertEquals(
+        "retrieval", span.getAttributes().get(AttributeKey.stringKey("gen_ai.operation.name")));
+    assertEquals(
+        "pinecone", span.getAttributes().get(AttributeKey.stringKey("gen_ai.provider.name")));
+    assertEquals(
+        "kb-product-docs",
+        span.getAttributes().get(AttributeKey.stringKey("gen_ai.data_source.id")));
+    assertEquals(
+        "text-embedding-3-small",
+        span.getAttributes().get(AttributeKey.stringKey("gen_ai.request.model")));
+    assertEquals(
+        "api.pinecone.io", span.getAttributes().get(AttributeKey.stringKey("server.address")));
+    assertEquals(443L, span.getAttributes().get(AttributeKey.longKey("server.port")));
+    assertEquals(5.0, span.getAttributes().get(AttributeKey.doubleKey("gen_ai.request.top_k")));
   }
 }
